--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -4,9 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> My Profile</title>
-  <link rel="stylesheet" type="text/css" href="portfolio.css">
+  <link rel="stylesheet"  href="portfolio.css">
 </head>
+<!-- <style>
+  .container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+}
+</style> -->
 <body>
-  <div></div>
+  <div class="container">
+ <div class="clm"><p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque ex nostrum odio! Deserunt optio rerum beatae obcaecati veritatis accusantium, repellendus quam pariatur accusamus dolorum sit placeat ab. Perspiciatis, doloribus? Neque.
+Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut necessitatibus, nemo harum exercitationem, beatae tempore quibusdam, placeat cupiditate ab provident ipsam? Dicta rem in non inventore quos rerum repellendus molestiae.
+Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet unde cum eaque nostrum voluptate nobis incidunt tempore ullam nulla natus? Deleniti illum, molestias ut provident ea placeat veritatis repellat fugiat.</p>
+</div>
+<div class="clm"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque ex nostrum odio! Deserunt optio rerum beatae obcaecati veritatis accusantium, repellendus quam pariatur accusamus dolorum sit placeat ab. Perspiciatis, doloribus? Neque.</p></div>
+<div class="clm"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque ex nostrum odio! Deserunt optio rerum beatae obcaecati veritatis accusantium, repellendus quam pariatur accusamus dolorum sit placeat ab. Perspiciatis, doloribus? Neque.</p></div>
+<div class="clm"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque ex nostrum odio! Deserunt optio rerum beatae obcaecati veritatis accusantium, repellendus quam pariatur accusamus dolorum sit placeat ab. Perspiciatis, doloribus? Neque.</p></div>
+<div class="clm"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque ex nostrum odio! Deserunt optio rerum beatae obcaecati veritatis accusantium, repellendus quam pariatur accusamus dolorum sit placeat ab. Perspiciatis, doloribus? Neque.</p></div>
+<div class="clm"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque ex nostrum odio! Deserunt optio rerum beatae obcaecati veritatis accusantium, repellendus quam pariatur accusamus dolorum sit placeat ab. Perspiciatis, doloribus? Neque.</p></div>
+<div class="clm"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque ex nostrum odio! Deserunt optio rerum beatae obcaecati veritatis accusantium, repellendus quam pariatur accusamus dolorum sit placeat ab. Perspiciatis, doloribus? Neque.</p></div>
+<div class="clm"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque ex nostrum odio! Deserunt optio rerum beatae obcaecati veritatis accusantium, repellendus quam pariatur accusamus dolorum sit placeat ab. Perspiciatis, doloribus? Neque.</p></div>
+</div>
 </body>
 </html> 
